A fix to long string values by using truncate and word breaks.

--- a/app/global/static/typography.css
+++ b/app/global/static/typography.css
@@ -10,3 +10,7 @@ h1 {
 .underline {
     text-decoration: underline;
 }
+
+.break-word {
+    word-break: break-word;
+}
